Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -34,13 +34,14 @@
 
         // --- CONFIGURACIÓN DE FIREBASE ---
         // (¡¡IMPORTANTE!! DEBES REEMPLAZAR ESTOS VALORES CON LOS REALES DE TU ARCHIVO indexx.html)
-        const firebaseConfig = {
-            apiKey: "AIzaSyC_Your_API_Key_Goes_Here", 
-            authDomain: "your-project-id.firebaseapp.com",
-            projectId: "your-project-id",
-            storageBucket: "your-project-id.appspot.com",
-            messagingSenderId: "123456789012",
-            appId: "1:123456789012:web:abcdef1234567890",
+                const firebaseConfig = {
+            apiKey: "AIzaSyBqHgV4vDat1-VmZfKbiPg7nuiX-ROcexw",
+            authDomain: "cirineo-cec21.firebaseapp.com",
+            projectId: "cirineo-cec21",
+            storageBucket: "cirineo-cec21.firebasestorage.app",
+            messagingSenderId: "620210618284",
+            appId: "1:620210618284:web:482bab9bf74650fff18409",
+            measurementId: "G-B7YLM78RVW"
         };
 
         const DEFAULT_REPO_URL = "https://raw.githubusercontent.com/jesusvn1993mplvt3-ai/CIRINEO/refs/heads/main/modelos";
